# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright OxidOS Automotive 2025.

[package]
name = "cyw4343"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
tickv = { path = "../../libraries/tickv" }
capsules-extra = { path = "../extra" }
capsules-core = { path = "../core" }

cyw43 = { git = "https://github.com/OxidosAutomotive/firmware.git", rev = "a775734" }

[lints]
workspace = true
